@@ -1,10 +1,17 @@
+[![Build Status](https://travis-ci.org/nigelm/broadworks-ocip.svg?branch=master)](https://travis-ci.org/nigelm/broadworks-ocip)
+[![Kwalitee status](http://cpants.cpanauthors.org/dist/Broadworks-OCIP.png)](http://cpants.charsbar.org/dist/overview/Broadworks-OCIP)
+[![GitHub issues](https://img.shields.io/github/issues/nigelm/broadworks-ocip.svg)](https://github.com/nigelm/broadworks-ocip/issues)
+[![GitHub tag](https://img.shields.io/github/tag/nigelm/broadworks-ocip.svg)]()
+[![Cpan license](https://img.shields.io/cpan/l/Broadworks-OCIP.svg)](https://metacpan.org/release/Broadworks-OCIP)
+[![Cpan version](https://img.shields.io/cpan/v/Broadworks-OCIP.svg)](https://metacpan.org/release/Broadworks-OCIP)
+
 # NAME
 
 Broadworks::OCIP - API for communication with Broadworks OCI-P Interface
 
 # VERSION
 
-version 0.08
+version 0.09
 
 # SYNOPSIS
 
@@ -17,7 +24,7 @@ version 0.08
 
 Broadworks::OCIP is a perl interface to the Broadworks OCI-P Provisioning
 interface.  The functions provided reflect the AS OCI-P. The methods supported
-are documented in the [Broadworks::OCIP::Methods](https://metacpan.org/pod/Broadworks::OCIP::Methods) module, which is
+are documented in the [Broadworks::OCIP::Methods](https://metacpan.org/pod/Broadworks%3A%3AOCIP%3A%3AMethods) module, which is
 autogenerated from the Broadworks schemas.
 
 ## Required Parameters
@@ -78,7 +85,7 @@ A select object on the connection socket.
 
 ### session
 
-The session identifier for the session - defaults to a [Data::UUID](https://metacpan.org/pod/Data::UUID) string.
+The session identifier for the session - defaults to a [Data::UUID](https://metacpan.org/pod/Data%3A%3AUUID) string.
 
 ### is\_authenticated
 
@@ -99,7 +106,7 @@ STDERR.
 ### BUILDARGS
 
 Standard [Moose](https://metacpan.org/pod/Moose) `BUILDARGS` function.  If a single argument is passed this
-is treated as a config filename (opened with [Config::Any](https://metacpan.org/pod/Config::Any)) if it is a scalar,
+is treated as a config filename (opened with [Config::Any](https://metacpan.org/pod/Config%3A%3AAny)) if it is a scalar,
 or assumed to be a hash reference, which is expanded up.
 
 If a config filename is passed this is opened, and any `Broadworks::OCIP` is
@@ -112,6 +119,11 @@ in its place.  This means dumping the object will not reveal the password.
 
 Sends an XML document to the Broadworks remote over the socket. Convert the
 passed string to the correct character set.
+
+### receive
+
+Receive an XML response from the Broadworks remote over the socket. Decode the
+received string and pass to the [Broadworks::OCIP::Response](https://metacpan.org/pod/Broadworks%3A%3AOCIP%3A%3AResponse) constructor.
 
 ### send\_command\_xml
 
@@ -144,7 +156,7 @@ Nigel Metheringham <Nigel.Metheringham@redcentricplc.com>
 
 # COPYRIGHT
 
-Copyright 2014 Recentric Solutions Limited. All rights reserved.
+Copyright 2014-2020 Recentric Solutions Limited. All rights reserved.
 
 # AUTHOR
 
@@ -152,7 +164,7 @@ Nigel Metheringham <nigelm@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2018 by Nigel Metheringham.
+This software is copyright (c) 2020 by Nigel Metheringham.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
