@@ -1,6 +1,7 @@
 {{$NEXT}}
     - Updated packaging and distribution info
     - Added travis CI config
+    - Switch Method::Signatures for Function::Parameters
 
 0.08      2018-06-25 17:03:25+01:00 Europe/London
     - Updated for more recent dependancies
